# wm_admitance

./: CMakeLists.txt  README.md  package.xml  wm_admitance_plugin.xml  wm_admittance_plugin.xml
config/: FT_parameters.cfg  filter_admitance.yaml  filter_admittance.yaml  sara_admitance.cfg  sara_admitance.yaml  wm_admitance.cfg  wm_admitance.yaml  wm_admittance.cfg  wm_admittance.yaml
doc/: manifest.yaml
doc/html/: ConfigManager_8h.html  ConfigManager_8h__dep__incl.map  ConfigManager_8h__dep__incl.md5  ConfigManager_8h__incl.map  ConfigManager_8h__incl.md5  ConfigManager_8h_source.html  ControlTypes_8h.html  ControlTypes_8h__dep__incl.map  ControlTypes_8h__dep__incl.md5  ControlTypes_8h__incl.map  ControlTypes_8h__incl.md5  ControlTypes_8h_source.html  DiscreteTransferFunction_8cpp.html  DiscreteTransferFunction_8cpp__incl.map  DiscreteTransferFunction_8cpp__incl.md5  DiscreteTransferFunction_8cpp_source.html  DiscreteTransferFunction_8h.html  DiscreteTransferFunction_8h__dep__incl.map  DiscreteTransferFunction_8h__dep__incl.md5  DiscreteTransferFunction_8h__incl.map  DiscreteTransferFunction_8h__incl.md5  DiscreteTransferFunction_8h_source.html  GravityModelTest_8cpp.html  GravityModelTest_8cpp__incl.map  GravityModelTest_8cpp__incl.md5  GravityModelTest_8cpp_source.html  URDFHelper_8cpp.html  URDFHelper_8cpp__incl.map  URDFHelper_8cpp__incl.md5  URDFHelper_8cpp_source.html  URDFHelper_8h.html  URDFHelper_8h__dep__incl.map  URDFHelper_8h__dep__incl.md5  URDFHelper_8h__incl.map  URDFHelper_8h__incl.md5  URDFHelper_8h_source.html  URDFTest_8cpp.html  URDFTest_8cpp__incl.map  URDFTest_8cpp__incl.md5  URDFTest_8cpp_source.html  (+140 more)
include/: WMGravityModule.h
include/WMAdmitance/: WMAdmitance.h  WMGravityModel.h
include/WMAdmittance/: WMAdmittance.h  WMGravityModel.h
include/WMUtilities/: ConfigManager.h  ControlTypes.h  DiscreteTransferFunction.h  URDFHelper.h
simulation/: AdmittanceSimulationDynamicCompansation.slx  AdmittanceSimulationFirstOrderFilter.slx  AdmittanceSimulationStaticForces.slx  Comparision.slx  ForwardDynamicSolver.m  ForwardKinematic.m  GravityModel.m  InverseDynamic.m  PerfectModel.slx  RobotParam.m
simulation/ArmModel/: arm.slx
simulation/URDF/: arm.urdf
src/: WMGravityModule.cpp
src/WMAdmitance/: WMAdmitance.cpp  WMGravityModel.cpp
src/WMAdmittance/: WMAdmittance.cpp  WMGravityModel.cpp
src/WMUtilities/: DiscreteTransferFunction.cpp  URDFHelper.cpp
test/: CMakeLists.txt  GravityModelTest.cpp  URDFTest.cpp
