<?xml version="1.0"?>
<package>
  <name>wm_admitance</name>
  <version>1.0.0</version>
  <description>Admitance algorithm</description>
  <maintainer email="kevin.blackburn.1@ens.etsmtl.ca">Kevin Blackburn</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/WalkingMachine/wm_admitance</url> -->


  <author email="kevin.blackburn.1@ens.etsmtl.ca">Kevin Blackburn</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

<!-- Pour le IMU
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
-->
    <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <hardware_interface plugin="${prefix}/wm_admitance_plugin.xml"/>
  </export>
</package>
